# skills-dev

./: .gitignore  AGENTS.md
skill-name/: SKILL.md
stock-analysis/: INDEX.md  SKILL.md
stock-analysis/assets/: csv_template.md  sample_analysis_output.csv
stock-analysis/references/: api_workflow.md  candlesticks_guide.md  groups_management.md  indicator_reference.md  quick_start.md
stock-analysis/scripts/: AGENTS.md  longport_candlesticks.py  longport_groups.py  main.py  output_helper.py  pyproject.toml  talib_calculator.py
